# job-scouting

./: .gitignore  README.md  hello.py  pyproject.toml  ruff_output.txt  ruff_output_2.txt  ty_output.txt  ty_output_2.txt
src/: config.py  models.py
src/clients/: adzuna.py  getonboard.py  jsearch.py
src/flows/: job_flow.py
src/scripts/: check_adzuna.py  check_getonboard.py  check_jsearch.py  check_telegram.py  verify_storage.py
src/services/: filter_service.py  notifier.py  storage_service.py
src/util/: logger_config.py  normalizer.py
